--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,265 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+@import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 5px;
+  background-color: #f3f6f7;
+  font-family: "Montserrat";
+}
+.singlePage {
+  margin: 35px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.image-grid {
+  --gap: 16px;
+  --num-cols: 3;
+  --row-height: 300px;
+
+  box-sizing: border-box;
+  padding: var(--gap);
+
+  display: grid;
+  grid-template-columns: repeat(var(--num-cols), 1fr);
+  grid-auto-rows: var(--row-height);
+  gap: var(--gap);
+}
+
+.image-grid > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5%;
+}
+
+.image-grid-col-2 {
+  grid-column: span 2;
+}
+
+.image-grid-row-2 {
+  grid-row: span 2;
+}
+
+/* Anything udner 1024px */
+@media screen and (max-width: 1024px) {
+  .image-grid {
+    --num-cols: 2;
+    --row-height: 200px;
+  }
+}
+
+.image {
+  position: relative;
+}
+
+.image img {
+  /* width:100%; */
+  /* vertical-align:top; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 25px;
+}
+
+.singleImg {
+  width: 100%;
+  max-width: 800px;
+  max-height: 400px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 25px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: auto;
+}
+
+.image:after {
+  content: "\A";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  border-radius: 25px;
+}
+.image:hover:after {
+  opacity: 0;
+}
+
+.first-txt {
+  position: absolute;
+  bottom: 50px;
+  left: 30px;
+  font-size: 35px;
+  font-family: "Montserrat";
+  color: azure;
+  opacity: 1;
+  text-overflow: ellipsis;
+}
+
+.second-txt {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  font-size: 20px;
+  font-family: "Montserrat";
+  color: azure;
+  text-overflow: ellipsis;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 75px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 16px;
+  border: 1px solid #888;
+  width: 60%;
+  height: 80%;
+  border-radius: 25px;
+  font-family: "Montserrat";
+  overflow: auto;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content > img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  border-radius: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+span.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  /* font-size: 20px; */
+}
+
+/* experiment */
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  /* align-content: flex-end; */
+  position: fixed;
+  top: 50%;
+  right: 3%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-family: "Flaticon";
+}
+.flex-container > i {
+  color: #ff226d;
+  margin: 10px;
+  font-size: 40px;
+  opacity: 0.5;
+}
+
+.flex-container > i:hover {
+  opacity: 1;
+}
+
+/* Responsive layout - makes a one column-layout instead of two-column layout */
+@media (max-width: 800px) {
+  .flex-container > i {
+    font-size: 30px;
+  }
+  .singleImg {
+    max-width: 400px;
+    max-height: 200px;
+  }
+  .first-txt {
+    font-size: 25px;
+  }
+  .second-txt {
+    font-size: 10px;
+  }
+}
+
+/* comment section  */
+.heading {
+  color: #666666;
+  text-align: center;
+}
+
+.container {
+  font-family: "Montserrat";
+  color: #404040;
+  background-color: #eee;
+  width: 520px;
+  margin-top: 20px;
+}
+.button-group {
+  margin-bottom: 20px;
+}
+.counter {
+  display: inline;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 10px;
+}
+.posts {
+  clear: both;
+  list-style: none;
+  padding-left: 0;
+  width: 100%;
+  text-align: left;
+}
+.posts li {
+  background-color: #fff;
+  border: 1.5px solid #d8d8d8;
+  border-radius: 10px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  word-wrap: break-word;
+  min-height: 42px;
+  box-shadow: 8px 8px 5px #888888;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
 }
