--- a/src/index.css
+++ b/src/index.css
@@ -263,3 +263,8 @@ span.sticky {
   background-color: #337ab7;
   border-color: #2e6da4;
 }
+
+.commentSheet {
+  padding-left: 30px;
+  padding-right: 30px;
+}
